# cloudtrail-sentry

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: sample_cloudtrail.json
src/cloudtrail_sentry/: __init__.py  __main__.py  _util.py  cli.py  engine.py  events.py  loader.py  models.py  registry.py
src/cloudtrail_sentry/output/: __init__.py  json_out.py  table.py
src/cloudtrail_sentry/rules/: __init__.py  auth.py  base.py  iam.py  logging_tampering.py  s3.py  security_groups.py
tests/: conftest.py  test_cli.py  test_engine.py  test_events.py  test_loader.py  test_models.py  test_output.py  test_registry.py  test_util.py
tests/fixtures/: EXPECTED.md  clean_baseline.json  noisy_incident.json
tests/fixtures/events/: aws_config_disabled.json  cloudtrail_logging_disabled.json  console_login_brute_force.json  console_login_without_mfa.json  guardduty_disabled.json  iam_access_key_created.json  iam_admin_policy_attached.json  iam_role_trust_policy_modified.json  iam_user_created.json  kms_key_disabled_or_scheduled_deletion.json  root_account_used.json  s3_bucket_exposed_public.json  security_group_open_to_internet.json  unauthorized_api_calls.json
tests/fixtures/golden/: sample_findings.json
tests/fixtures/malformed/: missing_records_key.json  truncated.json
tests/fixtures/negatives/: console_login_saml_no_mfa.json  console_login_with_mfa.json  readonly_describe.json  s3_policy_public_with_condition.json  s3_public_access_block_enabled.json  service_linked_role.json  sg_open_but_failed.json
tests/rules/: test_auth.py  test_fixtures.py  test_iam.py  test_logging_tampering.py  test_s3.py  test_security_groups.py
