[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudtrail-sentry"
version = "0.1.0"
description = "Detect suspicious AWS activity in CloudTrail logs via an extensible rule engine."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Yash Lad" }]
keywords = [
  "aws",
  "cloudtrail",
  "security",
  "devsecops",
  "threat-detection",
  "incident-response",
  "cli",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "detect-secrets>=1.5",
  "build>=1.2",
  "twine>=5.1",
]

[project.scripts]
cts = "cloudtrail_sentry.cli:main"

[project.urls]
Homepage = "https://github.com/yashlad/cloudtrail-sentry"
Repository = "https://github.com/yashlad/cloudtrail-sentry"
Issues = "https://github.com/yashlad/cloudtrail-sentry/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudtrail_sentry"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "examples", "docs", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=cloudtrail_sentry --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["cloudtrail_sentry"]
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "def __repr__",
]
